# hermes2d

./: CMake.vars
MSVC2008/: libamd.def
benchmarks/: CMakeLists.txt
benchmarks/dg-linear-forms-diffusion/: CMakeLists.txt  main.cpp
benchmarks/neutronics-2-group-adapt/: main.cpp
benchmarks/neutronics-heat-conduction-adapt/: main.cpp
examples/: CMake.common  CMakeLists.txt
examples/neutronics-2-group-adapt-exact/: CMakeLists.txt  TikZGraph.cpp  TikZGraph.h  main.cpp  run
examples/neutronics-4-group-adapt/: CMakeLists.txt  PNGGraph.cpp  PNGGraph.h  main.cpp  norms.cpp  run
examples/neutronics-4-group-adapt-trilinos/: CMakeLists.txt  CustomProjector.cpp  forms.cpp  h1_adapt_norm_maxim.cpp  main.cpp
examples/poisson-periodic/: CMakeLists.txt  H1PeriodicSpace.cpp  H1PeriodicSpace.h  domain.mesh  main.cpp
examples/val_neighb/: CMakeLists.txt  main.cpp
hermes2d/examples/linear-advection-dg/: main.cpp
hermes2d/src/: CMakeLists.txt  discrete_problem.cpp
hermes_common/: CMakeLists.txt  _hermes_common_api_new.h  matrix.cpp  matrix.h  python_api.cpp  python_solvers.cpp  solvers.h
hermes_common/tests/: CMakeLists.txt
src/: CMakeLists.txt  common.h  discrete_problem.cpp  feproblem.cpp  feproblem.h  forms.cpp  forms.h  function.h  hermes2d.h  linsystem.cpp  linsystem.h  matrix_old.cpp  matrix_old.h  mesh.cpp  mesh.h  neighbor.cpp  neighbor.h  nonlinsystem.cpp  precalc.cpp  precalc.h  quad.h  quad_std.cpp  refmap.cpp  refmap.h  regul.cpp  solution.cpp  solution.h  solver_umfpack.h  space.cpp  space.h  space_l2.cpp  space_l2.h  traverse.cpp  weakform.cpp  weakform.h
src/views/: mesh_view.cpp  mesh_view.h  scalar_view.cpp  scalar_view.h
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt
tests/benchmarks/neutronics-2-group-adapt/: forms.cpp  main.cpp
tests/neighbors/mesh/: CMakeLists.txt  main.cpp
tests/neighbors/solution/: main.cpp
tests/tutorial/05-bc-neumann/: main.cpp
tutorial/13-newton-elliptic-1/: CMakeLists.txt  main.cpp
tutorial/32-space-l2/: CMakeLists.txt
